--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ sentence-transformers==5.1.0
 scikit-learn==1.7.1
 PyPDF2==3.0.1
 python-docx==1.2.0
+opencv-python-headless==4.10.0.84
+numpy==2.1.3
